--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,4 +48,5 @@ jobs:
           path: './dist'
       - name: Deploy to GitHub Pages
         id: deployment
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         uses: actions/deploy-pages@v3
