--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,18 +41,9 @@ jobs:
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          # Upload entire repository
-          path: './dist'
-      # - name: Deploy to GitHub Pages
-      #   id: deployment
-      #   uses: actions/deploy-pages@v3
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     publish_dir: ./dist
       - name: Deploy
-        uses: kane1213/crystal
+        uses: peaceiris/actions-gh-pages@v3
           with:
-            folder: dist
+          publish_dir: ./dist
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          commit_message: 自动部署 # 5.部署时的 git 提交信息，自由填写
