--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,13 @@ jobs:
         run: npm i
       - name: Build
         run: npm run build
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
-      - name: Configure GitHub Pages
-        uses: actions/configure-pages@v3
+        with:
+          # Upload dist repository
+          path: './dist'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
